--- a/src/app/main/pages/authentication/lock/new-invited.component.html
+++ b/src/app/main/pages/authentication/lock/new-invited.component.html
@@ -94,7 +94,7 @@
 
                     <button mat-raised-button [disabled]="invitationForm.invalid" (click)="confirmInvitation()" class="submit-button  mt-24 mt-md-0" color="accent">
                         <mat-icon matSuffix>done</mat-icon>
-                        PONERME EN LA LISTA!
+                        ¡REGISTRARME!
                     </button>
                 </form>
 
