--- a/src/styles.scss
+++ b/src/styles.scss
@@ -11,9 +11,9 @@ contacts-contact-list .mat-table .mat-row .mat-cell {
 }
 
 
-
 .my-class .mat-dialog-container {
-    width: 600px !important;
+    width: 300px !important;
+    padding: 0px;
 }
 
 .my-class-add .mat-dialog-container {
