--- a/src/app/main/apps/academy/courses/courses.component.scss
+++ b/src/app/main/apps/academy/courses/courses.component.scss
@@ -2,57 +2,55 @@
 
 #academy-courses {
 
-    .header {
-        position: relative;
-        flex: 1 0 auto;
-        height: 280px;
-        max-height: 280px;
-        text-align: center;
-        overflow: hidden;
 
-        @include media-breakpoint('xs') {
-            height: 240px;
-            padding: 16px;
-        }
 
-        .hero-text {
+        
+        > .header {
 
-            .hero-icon {
-                position: absolute;
-                top: -64px;
-                left: 0px;
-                opacity: 0.04;
-                font-size: 512px !important;
-                width: 512px !important;
-                height: 512px !important;
-            }
+            padding: 2%;
 
-            h1 {
-                font-size: 40px;
-                font-weight: 300;
-                letter-spacing: 0.01em;
-                text-align: center;
-                margin-top: 0;
-                margin-bottom: 16px;
+            
+height: 100% !important;
+min-height: 100px !important;
+max-height: 100px !important;
 
-                @include media-breakpoint('xs') {
-                    font-size: 24px;
-                }
-            }
-
-            h3 {
+            .search-wrapper {
+                width: 100%;
                 max-width: 480px;
-                text-align: center;
-                font-weight: 300;
-                letter-spacing: 0.03em;
-                margin: 0;
+                border-radius: 28px;
+                overflow: hidden;
+                @include mat-elevation(1);
 
                 @include media-breakpoint('xs') {
-                    font-size: 14px;
+                    width: 100%;
+                }
+
+                .search {
+                    width: 100%;
+                    height: 48px;
+                    line-height: 48px;
+                    padding: 0 18px;
+
+                    input {
+                        width: 100%;
+                        height: 48px;
+                        min-height: 48px;
+                        max-height: 48px;
+                        padding: 0 16px;
+                        border: none;
+                        outline: none;
+                    }
                 }
             }
+
+            @include media-breakpoint('lt-md') {
+                padding: 8px 0;
+                height: 192px !important;
+                min-height: 192px !important;
+                max-height: 192px !important;
+            }
         }
-    }
+    
 
     .content {
 
@@ -114,15 +112,15 @@
                         min-height: 64px !important;
                         max-height: 64px !important;
 
-                        &.web-bg {
+                        &.Creador-bg {
                             background: mat-color($mat-blue, 500);
                         }
 
-                        &.android-bg {
+                        &.Cliente-bg {
                             background: mat-color($mat-green, 500);
                         }
 
-                        &.firebase-bg {
+                        &.Staff-bg {
                             background: mat-color($mat-amber, 800);
                         }
 
@@ -174,4 +172,8 @@
             }
         }
     }
+}
+
+.content-card {
+    padding: 16px;
 }
