--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -204,17 +204,9 @@
                 </mat-tab>
                   </mat-tab-group>
 
-                  <div *ngIf="selectedIndex === 3">
-
-                    <button  (click)="previousStep()" class="mr-8 w-100-p" mat-raised-button type="button"
-                    color="default">
-                    Anterior
-                </button>
-
-                  </div>
 
 
-                  <div *ngIf="selectedIndex != 3">
+                  <div  class="btn-navigate-tabs">
 
                   <button *ngIf="(isCreated && productForm.pristine) && (!removeTag && !uploadFile )" class="mr-8 w-100-p" mat-raised-button  type="button"
                   (click)="nextStep()"
@@ -231,6 +223,12 @@
                       color="accent">
                       Siguiente <mat-icon>save</mat-icon>
                   </button>
+
+                  <button *ngIf="btnNavigateStep()"  (click)="previousStep()" class="mr-8 w-100-p " mat-raised-button type="button"
+                  color="default">
+                  Anterior
+              </button>
+
                
                 </div>
 
