--- a/src/app/main/apps/academy/dialog/add/add.component.html
+++ b/src/app/main/apps/academy/dialog/add/add.component.html
@@ -42,6 +42,11 @@
             <mat-label>Email</mat-label>
             <input name="email" formControlName="email" matInput required >
             <mat-icon matSuffix class="secondary-text">email</mat-icon>
+
+            <mat-error >
+                {{ getMesaggeErrorEmail() }}
+            </mat-error>
+
         </mat-form-field>
 
         </div>
