--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -64,7 +64,7 @@
 
                        
 
-                        <form class="form-custom mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                        <form class="form-custom mr-24 form-margin" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                         name="productForm" [formGroup]="productForm">
 
                         <div class="h2 mb-16">Ingrese información general</div>
