fix design mobile

--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.scss
@@ -119,6 +119,10 @@ products-campaigns {
             max-width: 1040px;
             margin: 0 auto;
 
+            @include media-breakpoint('xs') {
+                margin-bottom: 30% !important;
+            }
+
 
 
             .no-courses {
