fix design mobile

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -1,4 +1,4 @@
-<div id="contact-list" class="page-layout-campaign carded fullwidth inner-scroll">
+<div id="contact-list" class="page-layout-campaign page-margin fullwidth inner-scroll">
 
     <div class="center" >
     <!-- HEADER -->
