--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -205,23 +205,26 @@
                   </mat-tab-group>
 
 
+                  
+                  <div  class="btn-navigate-tabs-prev">
 
-                  <div  class="btn-navigate-tabs">
-
-                    <button *ngIf="btnNavigateStep()" [disabled]="!btnNavigateStep"  (click)="previousStep()" class="mr-8 w-100-p " mat-raised-button type="button"
+                    <button [disabled]="!btnNavigateStep()"  (click)="previousStep()" class="mr-8 w-50-p " mat-raised-button type="button"
                     color="default">
-                   
-                    Anterior
                     <mat-icon>chevron_left</mat-icon>
+                    Anterior
+                   
                 </button>
 
+                
+            </div>
 
+                  <div  class="btn-navigate-tabs-next">
 
-                    <div *ngIf="btnNavigateNextStep()">
+                    <div >
 
         
                   
-                  <button *ngIf="(isCreated && productForm.pristine) && (!removeTag && !uploadFile )" class="mr-8 w-100-p" mat-raised-button  type="button"
+                  <button *ngIf="(isCreated && productForm.pristine) && (!removeTag && !uploadFile )" [disabled]="!btnNavigateNextStep()"  class="mr-8 w-100-p" mat-raised-button  type="button"
                   (click)="nextStep()"
                   color="accent">
                   Siguiente
@@ -229,7 +232,7 @@
                   <mat-icon>chevron_right</mat-icon>
               </button>
 
-                  <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid"  (click)="addProduct(true)" class="mr-8 w-100-p" mat-raised-button type="button"
+                  <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid" [disabled]="btnNavigateNextStep()"   (click)="addProduct(true)" class="mr-8 w-100-p" mat-raised-button type="button"
                   color="accent">
                   Crear
                   <mat-icon>save</mat-icon>
@@ -243,12 +246,9 @@
 
                 </div>
 
-     
-
-               
+ 
                 </div>
 
-            </div>
 
 
             <!-- / REACTIVE FORM EXAMPLE -->
