fix design mobile

--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -351,5 +351,9 @@ contacts-contact-list {
 
 .page-margin {
 
-    margin-bottom: 40%;
+  
+
+    @include media-breakpoint('xs') {
+        margin-bottom: 40%;
+    }
 }
