--- a/src/app/main/apps/e-commerce/product/product.component.html
+++ b/src/app/main/apps/e-commerce/product/product.component.html
@@ -224,7 +224,7 @@
 
         
                   
-                  <button *ngIf="(isCreated && productForm.pristine) && (!removeTag && !uploadFile )" [disabled]="!btnNavigateNextStep()"  class="mr-8 w-100-p" mat-raised-button  type="button"
+                  <button *ngIf="(isCreated && productForm.pristine) && (!removeTag && !uploadFile )" [disabled]="!btnNavigateNextStep()"  class="btn-size" mat-raised-button  type="button"
                   (click)="nextStep()"
                   color="accent">
                   Siguiente
@@ -232,13 +232,13 @@
                   <mat-icon>chevron_right</mat-icon>
               </button>
 
-                  <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid" [disabled]="btnNavigateNextStep()"   (click)="addProduct(true)" class="mr-8 w-100-p" mat-raised-button type="button"
+                  <button *ngIf="pageType ==='new'" [disabled]="productForm.invalid" [disabled]="btnNavigateNextStep()"   (click)="addProduct(true)" class="btn-size" mat-raised-button type="button"
                   color="accent">
                   Crear
                   <mat-icon>save</mat-icon>
               </button>
 
-                  <button *ngIf="(pageType ==='edit' && !productForm.pristine) || (removeTag || uploadFile)" (click)="saveProduct(true)" class="mr-8 w-100-p" mat-raised-button  type="button"
+                  <button *ngIf="(pageType ==='edit' && !productForm.pristine) || (removeTag || uploadFile)" (click)="saveProduct(true)" class="btn-size" mat-raised-button  type="button"
                       color="accent">
                       Siguiente 
                       <mat-icon>save</mat-icon>
