--- a/src/app/main/apps/contacts/contact-list/contact-list.component.html
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.html
@@ -213,7 +213,7 @@ class="paginator-left"
 
 
 
-<div *ngIf="_contactsService.contacts.length === 0 " class="empty-card-inv">
+<div *ngIf="_contactsService.contacts.length === 0 " class="no-invited">
 
        
         <img class="empty-inv" src="assets/images/listEmptyCut.png">
