--- a/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
+++ b/src/app/main/apps/e-commerce/product/campaigns/campaigns.component.html
@@ -38,6 +38,16 @@
 
         </div>
         <!-- / HEADER -->
+        
+
+        <div class="content p-24" >
+
+            <div fxLayout="column" class="content-card" fxLayoutAlign="center" fusePerfectScrollbar>
+    
+
+
+
+                     
 
         <div class="courses" fxLayout="row wrap" >
 
@@ -127,14 +137,18 @@
             </div>
 
 
-                                        
+                                    
+        </div>
 
         </div>
+
 
 
         <!-- / CONTENT CARD -->
     </div>
     <!-- / CENTER -->
 
+
+</div>
 
 </div>
