--- a/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
+++ b/src/app/layout/speed-dial-fab/speed-dial-fab.component.html
@@ -1,11 +1,11 @@
-<div class="fab-container" >
+<div class="fab-container">
         <button mat-fab class="fab-toggler"
                 [disabled]="loadingContact"
                 (click)="onToggleFab()">
                 <mat-icon *ngIf="!loadingContact">add</mat-icon>
                 <mat-spinner class="spinner-fab-btn" *ngIf="loadingContact"  diameter="35"></mat-spinner>
         </button>
-        <div [@speedDialStagger]="buttons.length"> <!-- and here -->
+        <div [@speedDialStagger]="buttons.length"  [@animateStagger]="{value:'50'}"> <!-- and here -->
           <input hidden id="fileUpload" type="file" #fileInput/>
      
                         <button 
