--- a/src/app/main/apps/contacts/contact-list/contact-list.component.scss
+++ b/src/app/main/apps/contacts/contact-list/contact-list.component.scss
@@ -290,6 +290,10 @@ contacts-contact-list {
     height: 500px;
     overflow: auto;
     display: table !important;
+
+    @include media-breakpoint('xs') {
+    height: 710px;
+    }
 }
 
 
